branch: lzapp_1a desc: lz-app work in progress (wip)
- Add remote service contstants for testing native app
  (lgz.ivanix.com/api, lgz.ivanix.games)

- Fixed classpage view refresh when returning from playgame view
- Fixed  controllers being called twice.
- Jslint cleanup
- Add build.env to access local up-to-date node_modules/.bin build commands
- Refrence bundled ionic and angular javascript libs.
  - Removed separate angular lib

- Added "com.ivanixmobile.lgz" appid required for native app compile by
  ivanix mobile llc

--- a/ionic.project
+++ b/ionic.project
@@ -3,8 +3,12 @@
   "app_id": "",
   "proxies": [
     {
-      "path": "/api/v2",
-      "proxyUrl": "http://localhost:3000/api/v2"
+      "path": "/api",
+      "proxyUrl": "http://lgz.ivanix.com/api"
+    },
+    {
+      "path": "/games",
+      "proxyUrl": "http://lgz.ivanix.com/games"
     }
   ]
 }
