API calls now properly include Authentication headers (in JSON format) to/from localStorage

--- a/ionic.project
+++ b/ionic.project
@@ -1,10 +1,5 @@
 {
   "name": "lgz-app",
   "app_id": "6c6ec43c",
-  "proxies": [
-    {
-      "path": "/api/v2",
-      "proxyUrl": "http://localhost:3000/api/v2"
-    }
-  ]
+  "proxies": []
 }
