--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "1.2.4",
-    "replace": "^0.3.0"
+    "replace": "^0.3.0",
+    "protractor": "^2.1.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
