branch: patch_pluggins_2a desc: move plugins from plugins.sh into package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "semver": "^4.3.0"
   },
   "cordovaPlugins": [
+    "net.yoik.cordova.plugins.screenorientation",
+    "org.apache.cordova.statusbar",
     "org.apache.cordova.device",
     "org.apache.cordova.console",
     "com.ionic.keyboard"
