branch: add_mediacapture_1a desc: add plugin to enable mic

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "semver": "^4.3.0"
   },
   "cordovaPlugins": [
+    "org.apache.cordova.media-capture",
     "net.yoik.cordova.plugins.screenorientation",
     "org.apache.cordova.statusbar",
     "org.apache.cordova.device",
